Build with Eclipse 2023-09 + tycho upgrade