@@ -16,9 +16,9 @@
 	</modules>
 
 	<properties>
-		<tycho-version>1.6.0</tycho-version>
+		<tycho-version>4.0.0</tycho-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<eclipse.name>2020-03</eclipse.name>
+		<eclipse.name>2023-09</eclipse.name>
 		<release>false</release>
 		<bintray.user></bintray.user>
 		<bintray.apikey></bintray.apikey>
@@ -30,7 +30,7 @@
 		<core-plugin.url>http://pdt-eg.github.io/Core-Plugin/nightly</core-plugin.url>
 		<external-mirror.url>http://pdt-eg.github.io/external-mirror/nightly</external-mirror.url>
 		<indexing.url>http://pulse00.github.io/eclipse-indexing-framework/nightly</indexing.url>
-		<test.vmargs>-Xmx512m -XX:MaxPermSize=256m</test.vmargs>
+		<test.vmargs>-Xmx512m</test.vmargs>
 	</properties>
 
 	<repositories>
@@ -98,8 +98,8 @@
 				<artifactId>tycho-compiler-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -117,7 +117,7 @@
 						<environment>
 							<os>linux</os>
 							<ws>gtk</ws>
-							<arch>x86</arch>
+							<arch>aarch64</arch>
 						</environment>
 						<environment>
 							<os>macosx</os>
@@ -125,9 +125,9 @@
 							<arch>x86_64</arch>
 						</environment>
 						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
-							<arch>x86</arch>
+							<os>macosx</os>
+							<ws>cocoa</ws>
+							<arch>aarch64</arch>
 						</environment>
 						<environment>
 							<os>win32</os>
